# muffin-v-chihuahua-model-as-a-service

./: README.md  docker-compose-dev.yaml  docker-compose.yaml
backend/: .gitignore  Makefile  dockerfile  setup.cfg
backend/muffin_v_chihuahua_ml_service/: ml_web_service.py
frontend/: .gitignore  MANIFEST.in  Makefile  dockerfile  setup.cfg
frontend/muffin_v_chihuahua/: __main__.py  display_predictions_with_model_as_a_service.py
