[metadata]
name = muffin-v-chihuahua-backend
version = 1.0
author = Mehdi Houacine
author_email =
home-page = https://github.com/Mehdi-H/muffin-v-chihuahua-model-as-a-service
license =
description = To perform a classification : is it a muffin or a chihuahua in an image ?
url =
platform = any
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers, DataScientists, MLEngineers
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://github.com/Mehdi-H/muffin-v-chihuahua-model-as-a-service/issues

[options]
zip_safe = false
packages = find:
install_requires =
    keras==2.4.3
    fastapi==0.63.0
    uvicorn[standard]==0.13.3
    tensorflow==2.4.0
    Pillow==8.1.0
    python-multipart==0.0.5
include_package_data = True
python_requires = >=3.8
