[metadata]
name = muffin-v-chihuahua-frontend
version = 1.0
author = Mehdi Houacine
author_email =
home-page = https://github.com/Mehdi-H/muffin-v-chihuahua-model-as-a-service
license =
description = To display a classification : is it a muffin or a chihuahua in an image ?
url =
platform = any
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers, DataScientists, MLEngineers
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://github.com/Mehdi-H/muffin-v-chihuahua-model-as-a-service/issues

[options]
zip_safe = false
packages = find:
install_requires =
    numpy==1.19.4
    Pillow==8.1.0
    requests==2.25.1
    streamlit==0.74.1
    watchdog==1.0.2
include_package_data = True
python_requires = >=3.8

[options.entry_points]
console_scripts =
    muffin-v-chihuahua-model-as-a-service = muffin_v_chihuahua.__main__:main
